Update doc & Add robots.txt

--- a/apps/web_server/priv/static/doc.yaml
+++ b/apps/web_server/priv/static/doc.yaml
@@ -1,7 +1,7 @@
 openapi: 3.0.1
 info:
   title: AnyEx 接口文档
-  description: "文档正在拼命完善中……"
+  description: "Swagger UI Doc（测试版）。在尝试开发之前请先行阅读开发指南，碰到任何问题及时反馈。您需要先通过认证接口获取 Token 并通过它解锁访问授权，否则您只能测试公开接口。"
   contact:
     name: AnyEx Project
     email: me@bluerain.io
@@ -9,7 +9,7 @@ info:
   license:
     name: MIT 许可证
     url: "https://opensource.org/licenses/mit-license.php"
-  version: alpha
+  version: 0.6.2
 servers:
   - url: "/"
 tags:
@@ -1556,6 +1556,292 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/ErrReason"
+  /tweet/admin:
+    post:
+      tags:
+        - 推文
+      summary: 添加一个推文
+      operationId: addTweet
+      security: [jwt_auth: []]
+      requestBody:
+        description: 推文
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/Tweet"
+      responses:
+        200:
+          description: 添加后的推文
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Tweet"
+        400:
+          description: 错误响应
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ErrReason"
+
+        401:
+          description: 无效授权
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ErrReason"
+    put:
+      tags:
+        - 推文
+      summary: 更新一个推文
+      operationId: updateTweet
+      security: [jwt_auth: []]
+      requestBody:
+        description: 推文
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/Tweet"
+      responses:
+        200:
+          description: 更新后的推文
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Tweet"
+        400:
+          description: 错误响应
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ErrReason"
+
+        401:
+          description: 无效授权
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ErrReason"
+  /tweet/admin/hidden/{id}:
+    put:
+      tags:
+        - 推文
+      summary: 隐藏一个推文
+      operationId: hiddenTweet
+      security: [jwt_auth: []]
+      parameters:
+        - in: path
+          name: id
+          required: true
+          schema:
+            type: integer
+          description: 推文的 ID
+      responses:
+        200:
+          description: 隐藏后的推文
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Tweet"
+        400:
+          description: 错误响应
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ErrReason"
+
+        401:
+          description: 无效授权
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ErrReason"
+  /tweet/admin/{id}:
+    delete:
+      tags:
+        - 推文
+      summary: 删除一个推文
+      operationId: deleteTweet
+      security: [jwt_auth: []]
+      parameters:
+        - in: path
+          name: id
+          required: true
+          schema:
+            type: integer
+          description: 推文的 ID
+      responses:
+        200:
+          description: 删除后的推文
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Tweet"
+        400:
+          description: 错误响应
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ErrReason"
+
+        401:
+          description: 无效授权
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ErrReason"
+  /tweet/admin/normal/{id}:
+    put:
+      tags:
+        - 推文
+      summary: 恢复一个推文
+      operationId: normalTweet
+      security: [jwt_auth: []]
+      parameters:
+        - in: path
+          name: id
+          required: true
+          schema:
+            type: integer
+          description: 推文的 ID
+      responses:
+        200:
+          description: 恢复后的推文
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Tweet"
+        400:
+          description: 错误响应
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ErrReason"
+  /tweet/admin/top/{id}:
+    post:
+      tags:
+        - 推文
+      summary: 置顶一个推文
+      operationId: topTweet
+      security: [jwt_auth: []]
+      parameters:
+        - in: path
+          name: id
+          required: true
+          schema:
+            type: integer
+          description: 推文的 ID
+      responses:
+        200:
+          description: 置顶后的推文
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Tweet"
+        400:
+          description: 错误响应
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ErrReason"
+    delete:
+      tags:
+        - 推文
+      summary: 取消推文置顶
+      operationId: cancelTopTweet
+      security: [jwt_auth: []]
+      parameters:
+        - in: path
+          name: id
+          required: true
+          schema:
+            type: integer
+          description: 推文的 ID
+      responses:
+        200:
+          description: 取消置顶后的推文
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Tweet"
+        400:
+          description: 错误响应
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ErrReason"
+  /tweet/list:
+    get:
+      tags:
+        - 推文
+      summary: 获取前台推文列表
+      operationId: findTweetList
+      parameters:
+        - in: query
+          name: offset
+          schema:
+            type: integer
+          description: 数据集偏移
+        - in: query
+          name: limit
+          schema:
+            type: integer
+          description: 数据集大小
+      responses:
+        200:
+          description: 推文列表响应
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: "#/components/schemas/Tweet"
+        400:
+          description: 错误响应
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ErrReason"
+  /tweet/admin/list:
+    get:
+      tags:
+        - 推文
+      summary: 获取后台推文列表
+      operationId: findAdminTweetList
+      security: [jwt_auth: []]
+      parameters:
+        - in: query
+          name: offset
+          schema:
+            type: integer
+          description: 数据集偏移
+        - in: query
+          name: limit
+          schema:
+            type: integer
+          description: 数据集大小
+      responses:
+        200:
+          description: 推文列表响应
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: "#/components/schemas/Tweet"
+        400:
+          description: 错误响应
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ErrReason"
+        401:
+          description: 无效授权
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ErrReason"
 components:
   schemas:
     Token:
@@ -1689,6 +1975,26 @@ components:
         description:
           type: string
         type:
+          type: string
+        top:
+          type: integer
+        inserted_at:
+          type: string
+          format: date-time
+        updated_at:
+          type: string
+          format: date-time
+        res_status:
+          type: integer
+    Tweet:
+      title: 推文
+      type: object
+      properties:
+        id:
+          type: integer
+        theme:
+          type: string
+        content:
           type: string
         top:
           type: integer
