Fix .drone.yml bugs

--- a/.drone.yml
+++ b/.drone.yml
@@ -20,7 +20,8 @@ pipeline:
   build-doc:
     image: openapitools/openapi-generator-cli
     commands:
-      - generate -i web_server/priv/static/doc.yaml -g html2 -o web_server/priv/static/doc
+      - alias openapi-generator-cli="java -jar /opt/openapi-generator/modules/openapi-generator-cli/target/openapi-generator-cli.jar"
+      - openapi-generator-cli generate -i web_server/priv/static/doc.yaml -g html2 -o web_server/priv/static/doc
 
   build:
     image: bluerain/elixir:1.8.1-slim
