--- a/apps/web_server/priv/static/doc.yaml
+++ b/apps/web_server/priv/static/doc.yaml
@@ -56,7 +56,7 @@ paths:
               schema:
                 $ref: "#/components/schemas/ErrReason"
   /token/admin/clean:
-    get:
+    post:
       tags:
         - 认证
       summary: 使所有令牌无效化
