--- a/prod.docker-compose.yml
+++ b/prod.docker-compose.yml
@@ -24,11 +24,12 @@ services:
       ANYEX_SERVER_PORT: 8080
       ANYEX_SERVER_USERNAME: admin
       ANYEX_SERVER_PASSWORD: admin123
-      ANYEX_SERVER_SECRET: 7EvrcO4jDM
       ANYEX_SERVER_MARKDOWN_ENABLES: article,tweet
       ANYEX_SERVER_DEFAULT_LIMIT: 25
       ANYEX_SERVER_MAX_LIMIT: 50
       ANYEX_SERVER_CORS_ORIGINS: "*"
+      ANYEX_SERVER_TOKEN_SECRET: demo_secret
+      ANYEX_SERVER_TOKEN_VALIDITY: 3888000
 
     depends_on:
       - db
