Fix prod.docker-compose.yml bug

--- a/prod.docker-compose.yml
+++ b/prod.docker-compose.yml
@@ -29,7 +29,7 @@ services:
       ANYEX_SERVER_MAX_LIMIT: 50
       ANYEX_SERVER_CORS_ORIGINS: "*"
       ANYEX_SERVER_TOKEN_SECRET: demo_secret
-      ANYEX_SERVER_TOKEN_VALIDITY: 3888000,
+      ANYEX_SERVER_TOKEN_VALIDITY: 3888000
       ANYEX_SERVER_SECURITY_CHECK: 3
 
     depends_on:
